Fix mobile overflow for header

--- a/_sass/partials/_header.scss
+++ b/_sass/partials/_header.scss
@@ -13,6 +13,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
   // transition: transform cubic-bezier(.2,1,.3,1) .4s;
   @include mq(md) {
     flex-direction: row;
